--- a/templates/index.html
+++ b/templates/index.html
@@ -1,30 +1,44 @@
 {% extends 'bootstrap/base.html' %}
 
-{% block title %}Smart Office IoT application {% endblock %}
+{% block html %}
+  {% block head %}
+    {% block title %}
+      <title>Smart Office IoT application</title>
+    {% endblock %}
 
-{% block navbar %}
-<nav class="navbar navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">Smart Office</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="doctors">Doctors</a></li>
-            <li><a href="patients">Patients</a></li>
-            <li><a href="clerks">Clerks</a></li>
-        </ul>
-    </div>
-</nav>
-{% endblock %}
+    {% block styles %}
+      {{ super() }}
+      <link rel="stylesheet" href="{{url_for('.static', filename='style.css')}}">
+    {% endblock %}
+  {% endblock %}
 
-{% block content %}
-<h1>Smart Office</h1>
-<div class="alert alert-success" role="alert">
-    
-</div>
-{% endblock %}
+  {% block body %}
+    {% block navbar %}
+      <nav class="navbar navbar-fixed-top">
+          <div class="container-fluid">
+              <div class="navbar-header">
+                  <a class="navbar-brand" href="#">Smart Office</a>
+              </div>
+              <ul class="nav navbar-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="doctors">Doctors</a></li>
+                  <li><a href="patients">Patients</a></li>
+                  <li><a href="clerks">Clerks</a></li>
+              </ul>
+          </div>
+      </nav>
+    {% endblock %}
 
-{% block scripts %}
-{{ super() }}
+    {% block content %}
+      <h1>Smart Office</h1>
+      <div class="alert alert-success" role="alert">
+
+      </div>
+    {% endblock %}
+
+  {% block scripts %}
+    {{ super() }}
+  {% endblock %}
+
+  {% endblock %}
 {% endblock %}
